# CPURayTracer

./: CMakeLists.txt  README.md
include/BSDF/: bsdf.hpp  ggx.hpp  grass.hpp  lambert.hpp  specular.hpp
include/camera/: camera.hpp  pinhole.hpp
include/core/: aabb.hpp  constant.hpp  modelloader.hpp  object.hpp  polygon.hpp  ray.hpp  renderer.hpp  scene.hpp
include/image/: image.hpp  texture.hpp
include/integrator/: integrator.hpp  mis.hpp  nee.hpp  normalchecker.hpp  pathtracer.hpp  volume_homo_render.hpp  whitetest.hpp
include/intersection/: intersectinfo.h
include/light/: light.hpp  sky.hpp
include/math/: vec2.hpp  vec3.hpp  vertex.hpp
include/sampling/: rng.hpp  sampler.hpp
include/shape/: shape.hpp  shere.hpp  triangle.hpp
include/volume/: volume.hpp
src/: BSDFtest.cpp  GGX.cpp  Glasstest.cpp  LStest.cpp  MIS.cpp  NEE.cpp  Scenetest.cpp  Volumetest.cpp  main.cpp  raytest.cpp  whiteTest.cpp
